# try-ydata-sdk

./: .gitignore  README.md  initial_getting_started.py  justfile  pyproject.toml
notebooks/: intro.ipynb
src/: initial_getting_started.py  profiling_synthetic_data.py  tabular_data_report_eg.py
