[project]
name = "try-ydata-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "ydata-sdk>=2.1.1",
]

[dependency-groups]
dev = [
    "notebook>=7.3.3",
]
